# EliFuchsmanBE

./: .gitignore  BUILD.bazel  Dockerfile  Dockerfile.dev  WORKSPACE  backend_ecr.tf  docker-compose.dev.yml  docker-compose.yml  ecr.tf  go.mod  go.sum  main.go  run_local.sh
config/: BUILD.bazel  cors.go
data/: basic_info.json  summary.json
handlers/: BUILD.bazel  apiresponses.go  basic_info.go  education_history.go  experience_history.go  handler.go  projects.go  resume.go  summary.go
internal/eli_fuchsman/: BUILD.bazel  basic_info.go  education_history.go  eli_fuchsman.go  experience_history.go  projects.go  resume.go  summary.go
internal/eli_fuchsman_db/: BUILD.bazel  eli_fuchsman_db.go  mock_db.go
