load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "eli_fuchsman_db",
    srcs = [
        "eli_fuchsman_db.go",
        "mock_db.go",
    ],
    importpath = "github.com/efuchsman/EliFuchsmanBE/internal/eli_fuchsman_db",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//aws/session",
        "@com_github_aws_aws_sdk_go//service/dynamodb",
        "@com_github_aws_aws_sdk_go//service/dynamodb/dynamodbattribute",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)
